Extend repo health with unknown and invalid types